# jolt

./: Cargo.toml
examples/secp256k1q-chain/: Cargo.toml
examples/secp256k1q-chain/guest/: Cargo.toml
examples/secp256k1q-chain/guest/src/: lib.rs  main.rs
examples/secp256k1q-chain/src/: main.rs
jolt-core/src/host/: program.rs
jolt-inlines/bigint/src/multiplication/: sequence_builder.rs
jolt-inlines/secp256k1/: Cargo.toml
jolt-inlines/secp256k1/src/: exec.rs  host.rs  lib.rs  sdk.rs  sequence_builder.rs  tests.rs
jolt-inlines/sha2/src/: sequence_builder.rs
tracer/src/instruction/: inline.rs
