[package]
name = "secp256k1q-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { path = "../../jolt-sdk", features = ["host"] }
tracing-subscriber = "0.3"
tracing = "0.1"
jolt-inlines-secp256k1 = { path = "../../jolt-inlines/secp256k1", features = ["host"] }
guest = { package = "secp256k1q-chain-guest", path = "./guest" }

hex = "0.4.3"
