[package]
name = "jolt-inlines-secp256k1"
version = "0.1.0"
edition = "2021"
description = "secp256k1 inline implementations for Jolt VM"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"

[features]
default = []
host = ["dep:ctor", "dep:tracer", "dep:tracing"]

[dependencies]
ctor = { workspace = true, optional = true }
tracer = { workspace = true, optional = true, features = ["std"] }
tracing = { workspace = true, optional = true }
num-bigint = { version = "0.4.6", default-features = false}

[dev-dependencies]
hex-literal.workspace = true
tracer = { workspace = true, features = ["std", "test-utils"] }
